--- a/package.json
+++ b/package.json
@@ -3,25 +3,66 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.35",
+    "@mastra/core": "^0.21.0",
+    "@mastra/evals": "^0.14.0",
+    "@mastra/libsql": "^0.15.2",
+    "@mastra/loggers": "^0.10.16",
+    "@mastra/memory": "^0.15.7",
+    "@mastra/playground-ui": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/extension-collaboration": "^3.5.3",
+    "@tiptap/extension-color": "^3.6.2",
+    "@tiptap/extension-font-family": "^3.6.2",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
+    "@tiptap/extension-highlight": "^3.6.2",
+    "@tiptap/extension-image": "^3.5.3",
+    "@tiptap/extension-link": "^3.6.2",
+    "@tiptap/extension-placeholder": "^3.5.3",
+    "@tiptap/extension-strike": "^3.6.2",
+    "@tiptap/extension-subscript": "^3.6.2",
+    "@tiptap/extension-superscript": "^3.6.2",
+    "@tiptap/extension-table": "^3.5.3",
+    "@tiptap/extension-table-cell": "^3.5.3",
+    "@tiptap/extension-table-header": "^3.5.3",
+    "@tiptap/extension-table-row": "^3.5.3",
+    "@tiptap/extension-text-align": "^3.5.3",
+    "@tiptap/extension-text-style": "^3.6.2",
+    "@tiptap/extension-underline": "^3.6.2",
+    "@tiptap/react": "^3.5.3",
+    "@tiptap/starter-kit": "^3.5.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
+    "next": "15.5.4",
+    "pptxgenjs": "^4.0.1",
+    "puppeteer": "^24.22.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "recharts": "^2.13.3",
+    "reveal.js": "^5.2.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.4.18",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5"
   }
 }
